{
  "version": 4,
  "terraform_version": "0.14.11",
  "serial": 55,
  "lineage": "13dcb2da-ebf5-31c1-45d0-87a18556cff7",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:129432529795:security-group/sg-0c1f54a17ef469fc1",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-0c1f54a17ef469fc1",
            "ingress": [],
            "name": "myapp-eks-cluster20210730203627082000000007",
            "name_prefix": "myapp-eks-cluster",
            "owner_id": "129432529795",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myapp-eks-cluster-eks_cluster_sg",
              "application": "myapp",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "myapp-eks-cluster-eks_cluster_sg",
              "application": "myapp",
              "environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-042d9d8169115d20f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.quarklink-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:129432529795:security-group/sg-0428fdb67de74c06e",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-0428fdb67de74c06e",
            "ingress": [],
            "name": "myapp-eks-cluster20210730203628707200000008",
            "name_prefix": "myapp-eks-cluster",
            "owner_id": "129432529795",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myapp-eks-cluster-eks_worker_sg",
              "application": "myapp",
              "environment": "dev",
              "kubernetes.io/cluster/myapp-eks-cluster": "owned"
            },
            "tags_all": {
              "Name": "myapp-eks-cluster-eks_worker_sg",
              "application": "myapp",
              "environment": "dev",
              "kubernetes.io/cluster/myapp-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-042d9d8169115d20f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.quarklink-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-1453427055",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c1f54a17ef469fc1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.quarklink-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-2233924191",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c1f54a17ef469fc1",
            "self": false,
            "source_security_group_id": "sg-0428fdb67de74c06e",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.quarklink-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-2083482788",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0428fdb67de74c06e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.quarklink-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-2024398469",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0428fdb67de74c06e",
            "self": false,
            "source_security_group_id": "sg-0c1f54a17ef469fc1",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.quarklink-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-2283580772",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0428fdb67de74c06e",
            "self": false,
            "source_security_group_id": "sg-0c1f54a17ef469fc1",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.quarklink-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-2825095872",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0428fdb67de74c06e",
            "self": false,
            "source_security_group_id": "sg-0428fdb67de74c06e",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.quarklink-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.quarklink-vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0f6d332acd702caf0",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-210-119-18.compute-1.amazonaws.com",
            "public_ip": "18.210.119.18",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "quarklink-vpc-us-east-1a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "quarklink-vpc-us-east-1a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.quarklink-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:129432529795:internet-gateway/igw-077f46b9ae637cd7d",
            "id": "igw-077f46b9ae637cd7d",
            "owner_id": "129432529795",
            "tags": {
              "Name": "quarklink-vpc",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "quarklink-vpc",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "vpc_id": "vpc-042d9d8169115d20f"
          },
          "dependencies": [
            "module.quarklink-vpc.aws_vpc.this",
            "module.quarklink-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.quarklink-vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f6d332acd702caf0",
            "connectivity_type": "public",
            "id": "nat-07936f7ffe86ae5e8",
            "network_interface_id": "eni-062ba4ab451e51f3b",
            "private_ip": "10.0.4.225",
            "public_ip": "18.210.119.18",
            "subnet_id": "subnet-0ca4c5f49fb43f672",
            "tags": {
              "Name": "quarklink-vpc-us-east-1a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "quarklink-vpc-us-east-1a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.quarklink-vpc.aws_eip.nat",
            "module.quarklink-vpc.aws_internet_gateway.this",
            "module.quarklink-vpc.aws_subnet.public",
            "module.quarklink-vpc.aws_vpc.this",
            "module.quarklink-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.quarklink-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-048853cea2bb8d31d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07936f7ffe86ae5e8",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-048853cea2bb8d31d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.quarklink-vpc.aws_eip.nat",
            "module.quarklink-vpc.aws_internet_gateway.this",
            "module.quarklink-vpc.aws_nat_gateway.this",
            "module.quarklink-vpc.aws_route_table.private",
            "module.quarklink-vpc.aws_subnet.public",
            "module.quarklink-vpc.aws_vpc.this",
            "module.quarklink-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.quarklink-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-077f46b9ae637cd7d",
            "id": "r-rtb-01f2f6422dcdfdcf41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01f2f6422dcdfdcf4",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.quarklink-vpc.aws_internet_gateway.this",
            "module.quarklink-vpc.aws_route_table.public",
            "module.quarklink-vpc.aws_vpc.this",
            "module.quarklink-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.quarklink-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:129432529795:route-table/rtb-048853cea2bb8d31d",
            "id": "rtb-048853cea2bb8d31d",
            "owner_id": "129432529795",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "quarklink-vpc-private",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "quarklink-vpc-private",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "vpc_id": "vpc-042d9d8169115d20f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.quarklink-vpc.aws_vpc.this",
            "module.quarklink-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.quarklink-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:129432529795:route-table/rtb-01f2f6422dcdfdcf4",
            "id": "rtb-01f2f6422dcdfdcf4",
            "owner_id": "129432529795",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "quarklink-vpc-public",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "quarklink-vpc-public",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "vpc_id": "vpc-042d9d8169115d20f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.quarklink-vpc.aws_vpc.this",
            "module.quarklink-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.quarklink-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d9c837afa5bdc83",
            "route_table_id": "rtb-048853cea2bb8d31d",
            "subnet_id": "subnet-038bcb34f085f366d"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.quarklink-vpc.aws_route_table.private",
            "module.quarklink-vpc.aws_subnet.private",
            "module.quarklink-vpc.aws_vpc.this",
            "module.quarklink-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04116fbb16bb20f28",
            "route_table_id": "rtb-048853cea2bb8d31d",
            "subnet_id": "subnet-00231a6c9bdfeb2f6"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.quarklink-vpc.aws_route_table.private",
            "module.quarklink-vpc.aws_subnet.private",
            "module.quarklink-vpc.aws_vpc.this",
            "module.quarklink-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6533d97494125f7",
            "route_table_id": "rtb-048853cea2bb8d31d",
            "subnet_id": "subnet-0f9e01cf7d34f5bf3"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.quarklink-vpc.aws_route_table.private",
            "module.quarklink-vpc.aws_subnet.private",
            "module.quarklink-vpc.aws_vpc.this",
            "module.quarklink-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.quarklink-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3e9b3be6ac0c33f",
            "route_table_id": "rtb-01f2f6422dcdfdcf4",
            "subnet_id": "subnet-0ca4c5f49fb43f672"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.quarklink-vpc.aws_route_table.public",
            "module.quarklink-vpc.aws_subnet.public",
            "module.quarklink-vpc.aws_vpc.this",
            "module.quarklink-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7fc578695fb2e2f",
            "route_table_id": "rtb-01f2f6422dcdfdcf4",
            "subnet_id": "subnet-0a242a1009134e317"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.quarklink-vpc.aws_route_table.public",
            "module.quarklink-vpc.aws_subnet.public",
            "module.quarklink-vpc.aws_vpc.this",
            "module.quarklink-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f61de1fc2601f161",
            "route_table_id": "rtb-01f2f6422dcdfdcf4",
            "subnet_id": "subnet-0cb5681a6a01795a1"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.quarklink-vpc.aws_route_table.public",
            "module.quarklink-vpc.aws_subnet.public",
            "module.quarklink-vpc.aws_vpc.this",
            "module.quarklink-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.quarklink-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:129432529795:subnet/subnet-038bcb34f085f366d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-038bcb34f085f366d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "129432529795",
            "tags": {
              "Name": "quarklink-vpc-private-us-east-1a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "quarklink-vpc-private-us-east-1a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-042d9d8169115d20f"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.quarklink-vpc.aws_vpc.this",
            "module.quarklink-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:129432529795:subnet/subnet-00231a6c9bdfeb2f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-00231a6c9bdfeb2f6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "129432529795",
            "tags": {
              "Name": "quarklink-vpc-private-us-east-1b",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "quarklink-vpc-private-us-east-1b",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-042d9d8169115d20f"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.quarklink-vpc.aws_vpc.this",
            "module.quarklink-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:129432529795:subnet/subnet-0f9e01cf7d34f5bf3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0f9e01cf7d34f5bf3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "129432529795",
            "tags": {
              "Name": "quarklink-vpc-private-us-east-1c",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "quarklink-vpc-private-us-east-1c",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-042d9d8169115d20f"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.quarklink-vpc.aws_vpc.this",
            "module.quarklink-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.quarklink-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:129432529795:subnet/subnet-0ca4c5f49fb43f672",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0ca4c5f49fb43f672",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "129432529795",
            "tags": {
              "Name": "quarklink-vpc-public-us-east-1a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "quarklink-vpc-public-us-east-1a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-042d9d8169115d20f"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.quarklink-vpc.aws_vpc.this",
            "module.quarklink-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:129432529795:subnet/subnet-0a242a1009134e317",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0a242a1009134e317",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "129432529795",
            "tags": {
              "Name": "quarklink-vpc-public-us-east-1b",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "quarklink-vpc-public-us-east-1b",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-042d9d8169115d20f"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.quarklink-vpc.aws_vpc.this",
            "module.quarklink-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:129432529795:subnet/subnet-0cb5681a6a01795a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0cb5681a6a01795a1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "129432529795",
            "tags": {
              "Name": "quarklink-vpc-public-us-east-1c",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "quarklink-vpc-public-us-east-1c",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-042d9d8169115d20f"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.quarklink-vpc.aws_vpc.this",
            "module.quarklink-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.quarklink-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:129432529795:vpc/vpc-042d9d8169115d20f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05c35925dbb23412b",
            "default_route_table_id": "rtb-00182fff97d9f6edb",
            "default_security_group_id": "sg-0606f62cd36263cf5",
            "dhcp_options_id": "dopt-01169e79e49263ff9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-042d9d8169115d20f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00182fff97d9f6edb",
            "owner_id": "129432529795",
            "tags": {
              "Name": "quarklink-vpc",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "quarklink-vpc",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}